# ai-tutorial

./: .gitignore  README.md  inference_server.py  pyproject.toml  requirements_server.txt  train_transformer.py
DigitRecognizer/: App.tsx  README.md  TESTING.md  app.json  index.js  package-lock.json  package.json
DigitRecognizer/android/: settings.gradle
DigitRecognizer/android/app/: build.gradle
DigitRecognizer/android/app/src/main/java/com/digitrecognizer/: MainActivity.kt  MainApplication.kt
DigitRecognizer/android/app/src/main/res/values/: strings.xml
DigitRecognizer/api/: inference.ts
DigitRecognizer/components/: DrawingCanvas.tsx  PredictionDisplay.tsx
DigitRecognizer/ios/: Podfile
DigitRecognizer/ios/DigitRecognizer/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
DigitRecognizer/ios/DigitRecognizer.xcodeproj/: project.pbxproj
DigitRecognizer/ios/DigitRecognizer.xcodeproj/xcshareddata/xcschemes/: DigitRecognizer.xcscheme
DigitRecognizerLocal/: App.tsx  TESTING.md  app.json  package-lock.json  package.json
DigitRecognizerLocal/api/: inference.ts
DigitRecognizerLocal/components/: PredictionDisplay.tsx
exercises/: 01_hello_pytorch.ipynb  02_load_mnist.ipynb  03_create_model.ipynb  04_train_model.ipynb  05_evaluate_model.ipynb  06_inference.ipynb  07_convert_to_tfjs.ipynb
